--- a/src/ui/doctor/DoctorRegisterFrame.form
+++ b/src/ui/doctor/DoctorRegisterFrame.form
@@ -610,7 +610,7 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/assets/patient.jpeg"/>
+          <Image iconType="3" name="/assets/doctor2.jpeg"/>
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
