--- a/src/ui/patient/PatientRegisterFrame.form
+++ b/src/ui/patient/PatientRegisterFrame.form
@@ -130,7 +130,6 @@
                                   <Group type="102" attributes="0">
                                       <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                                       <Component id="lblZipCode" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
                                       <EmptySpace max="32767" attributes="0"/>
@@ -138,9 +137,9 @@
                                           <Component id="lblCommunity" min="-2" max="-2" attributes="0"/>
                                           <Component id="lblCity" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="cbbCommunity" alignment="1" max="32767" attributes="0"/>
                                   <Component id="cbbCity" max="32767" attributes="0"/>
@@ -151,7 +150,7 @@
                               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                               <Component id="lblHouse" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="txtHouse" min="-2" pref="253" max="-2" attributes="0"/>
+                              <Component id="txtHouse" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
