--- a/src/ui/hospital/EditPatientInfoFrame.form
+++ b/src/ui/hospital/EditPatientInfoFrame.form
@@ -72,9 +72,9 @@
               </Group>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="btnClear" min="-2" pref="90" max="-2" attributes="0"/>
+                  <Component id="btnClear" linkSize="1" min="-2" pref="90" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
-                  <Component id="btnSave" min="-2" pref="98" max="-2" attributes="0"/>
+                  <Component id="btnSave" linkSize="1" min="-2" pref="98" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="351" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -97,8 +97,8 @@
                   </Group>
                   <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
-                      <Component id="btnClear" alignment="2" min="-2" pref="41" max="-2" attributes="0"/>
-                      <Component id="btnSave" alignment="2" min="-2" pref="41" max="-2" attributes="0"/>
+                      <Component id="btnClear" linkSize="2" alignment="2" min="-2" pref="41" max="-2" attributes="0"/>
+                      <Component id="btnSave" linkSize="2" alignment="2" min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="50" max="32767" attributes="0"/>
               </Group>
