--- a/src/ui/hospital/ManagePatientPane.form
+++ b/src/ui/hospital/ManagePatientPane.form
@@ -28,9 +28,9 @@
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="btnRefesh" min="-2" pref="117" max="-2" attributes="0"/>
+                      <Component id="btnRefesh" linkSize="1" min="-2" pref="117" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btnEdit" min="-2" pref="117" max="-2" attributes="0"/>
+                      <Component id="btnEdit" linkSize="1" min="-2" pref="117" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="0" pref="38" max="32767" attributes="0"/>
@@ -50,12 +50,12 @@
               </Group>
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="280" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnEdit" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
-                  <Component id="btnRefesh" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
+                  <Component id="btnEdit" linkSize="2" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
+                  <Component id="btnRefesh" linkSize="2" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="85" max="32767" attributes="0"/>
+              <EmptySpace pref="86" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
